--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">JPress</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">"Manner maketh the man"</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">"Manners maketh the man"</h2>
                 </div>
             </div>
         </header>
