--- a/about/about.html
+++ b/about/about.html
@@ -37,14 +37,11 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-10 col-lg-8 mx-auto text-center">
-                            <h2 class="text-white mb-5">About Me</h2>
+                        <div class="col-md-10 col-lg-8 mx-auto text-center" style="margin-top: 7em;">
                             <img class="jerpic" src="../assets/img/jerwin.png" alt="">
                             <p class="text-white mb-5">Hi! my name is Jerwin Carreon. I'm a student of Jose Maria College currently studying Bachelor of Science in Information Technology.</p>
                         </div>
                     </div>
-                </div>
-                <div class="container">
                     <div class="row">
                         <div class="col-md-4 mb-3 mb-md-0">
                             <div class="card py-4 h-100">
@@ -89,7 +86,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>     
+                    </div> 
                 </div>
             </div>
         </header>
