--- a/collection/DataScience.html
+++ b/collection/DataScience.html
@@ -28,34 +28,57 @@
                     </ul>
                 </div>
             </div>
-
-
         </nav>
-        <!-- Place to Visit-->
         <section class="visit-section bg-bwgrad" >
             <div class="container">
-                <!-- Featured-->
                 <h2 style="color:black; padding: 3rem;">Projects<hr color="white"></h2>
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                     <h4 class="text-black" id="christmas">Sentiment Analysis (What makes Christmas merrier?)</h4>
-                    <h5></h5>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
+                <div class="video_time_authored">
+                    Date Published: Wednesday - November 18, 2020
+                </div>
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <iframe width="1008" height="547" src="https://www.youtube.com/embed/kY8cH1jyB98" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
+                    <iframe width="1008" height="547" src="https://www.youtube.com/embed/kY8cH1jyB98" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video_desc">
+                    This video is my study about a sentiment analysis pertaining to <strong>"What makes a Christmas merrier?"</strong>.
+                    The main objective of this project is to give myself especially for everybody an insight and steps to prepare for Christmas.
+                    The processes were all done through programming(using Python language) and with the use of webscrape tool(Beautiful Soup).
+                    Following explanations and steps are right on the video.
+                </div>
+                <hr>
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                     <h4 class="text-black" id="sentiment">Twitter Sentiment Analysis (@Alan Cayetano)</h4>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
+                <div class="video_time_authored">
+                    Date Published: Tuesday - October 20, 2020
+                </div>
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <iframe width="1008" height="547" src="https://www.youtube.com/embed/DZIVlZpuOUI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video_desc">
+                    This is a sample of a Twitter Sentiment Analysis. I used here Alan Cayetano's account as my subject.
+                    Here in the Philippines he is a Congressman and previous Speaker of the House. In the video you'll see the processes of making
+                    the sentiment analysis. There will be data visualizations such word cloud, tables etc. which determines the <strong>polarity</strong> and <strong>subjectivity</strong>.
+
                 </div>
                 <div class="project-text w-100 my-auto text-center text-lg-left" >
                     <h4 class="text-black" id="nlp">Natural Language Processing</h4>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
+                <div class="video_time_authored">
+                    Date Published: Tuesday - October 20, 2020
+                </div>
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <iframe width="1008" height="547" src="https://www.youtube.com/embed/j5-cx7LTR3c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video_desc">
+                    This is my study in Data Science and my first of Natural Language Processing entitled <strong>"The best places to visit in the Philippines"</strong>.
+                    In this project I used python as my programming language and to display the several data visualizations.
+                    Then Beautiful soup as my webscrape tool for the gathering of data. The different steps and conclusions are right on the video.
                 </div>
             </div>
         </section>
