--- a/collection/IAS.html
+++ b/collection/IAS.html
@@ -39,15 +39,31 @@
                     <h4 class="text-black" id="pyFileEncrypt">Python File Encryption</h4>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
+                <div class="video_time_authored">
+                    Date published: Thursday - November 26, 2020
+                </div>
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <iframe width="1013" height="550" src="https://www.youtube.com/embed/-OarLuh5uoc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                </div>
+                <div class=video_desc>
+                    File encryption is one way to protect your files from unauthorized access.
+                    In this preview is a file encryption that I created based on Python using Pycryptodome.
+                    A demo and walkthrough of the codes with some explanations are here presented.
                 </div>
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                     <h4 class="text-black" id="ceasarCipher">Ceasar Cipher</h4>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
+                <div class="video_time_authored">
+                    Date published: Thursday - November 24, 2020
+                </div>
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <iframe width="1013" height="550" src="https://www.youtube.com/embed/4rH-zjx0EhQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                </div>
+                <div class=video_desc>
+                    This is my own version of Ceasar Cipher. Adding it a reversed method to all the shifted output.
+                    Ceasar Cipher is type of cryptography and which most widely known encryption techniques. This is my tutorial and have a preview
+                    on the short video.
                 </div>
             </div>
         </section>
