deleted calendar of activities

--- a/about/about.html
+++ b/about/about.html
@@ -155,65 +155,15 @@
                 </div>
             </div>
         </section>
-        <!-- Calendar of Activies-->
-        <section class="calendar-selection" id="calendar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4">Calendar of Activities</h2>
-                          <table class="table-fill">
-                            <thead>
-                            <tr>
-                            <th class="text-left">September</th>
-                            <th class="text-left">October</th>
-                            <th class="text-left">November</th>
-                            </tr>
-                            </thead>
-                            <tbody class="table-hover">
-                            <tr>
-                            <td class="text-left">Submit Case Study</td>
-                            <td class="text-left">Learn Mobile Development</td>
-                            <td class="text-left">Apply All the Learnings of Cloud Computing</td>
-                            </tr>
-                            <tr>
-                            <td class="text-left">Create System Diagram</td>
-                            <td class="text-left">Contribute Codes and Files on Github</td>
-                            <td class="text-left">Practice Cyber Security and Ethics</td>
-                            </tr>
-                            <tr>
-                            <td class="text-left">Get to Know Database</td>
-                            <td class="text-left">Learn more about Data Science</td>
-                            <td class="text-left">Evaluate Future Plans</td>
-                        </tr>
-                            <tr>
-                            <td class="text-left">Try Event Driven Programming</td>
-                            <td class="text-left">Implement System Design and Analysis</td>
-                            <td class="text-left">Bond with my Family</td>
-                            </tr>
-                            <tr>
-                            <td class="text-left">Commit Examination Test</td>
-                            <td class="text-left">Commit Examination Test</td>
-                            <td class="text-left">Commit Examination Test</td>
-                            </tr>
-                            </tbody>
-                            </table>
-                            <br>
-                            <br>
-                            <br>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Contact-->
         <section class="contact-section bg-black">
             <div class="social d-flex justify-content-center">
-                <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                <a class="mx-2" href="https://www.facebook.com/jrwnMM/"><i class="fab fa-facebook-f"></i></a>
+                <a class="mx-2" href="https://github.com/jer-hub/jpress"><i class="fab fa-github"></i></a>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Jpress 2020</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
