--- a/collection/DataScience.html
+++ b/collection/DataScience.html
@@ -85,9 +85,8 @@
         <!-- Contact-->
         <section class="contact-section bg-black">
             <div class="social d-flex justify-content-center">
-                <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                <a class="mx-2" href="https://www.facebook.com/jrwnMM/"><i class="fab fa-facebook-f"></i></a>
+                <a class="mx-2" href="https://github.com/jer-hub/jpress"><i class="fab fa-github"></i></a>
             </div>
         </section>
         <!-- Footer-->
